changes in package.json and added example of .env file

--- a/sma-contact-flow-main/sma-contact-flow-parser/package.json
+++ b/sma-contact-flow-main/sma-contact-flow-parser/package.json
@@ -7,6 +7,10 @@
   "files": [
     "/dist"
   ],
+  "scripts": {
+    "prestart": "tsc",
+    "start": "npm install"
+  },
   "dependencies": {
     "aws-sdk": "^2.1183.0",
     "sma-contact-flow-parser": "^1.0.0"
