Removed .env.exapmle

--- a/sma-contact-flow/sma-contact-flow-parser/package.json
+++ b/sma-contact-flow/sma-contact-flow-parser/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1183.0",
+    "dotenv-json": "^1.0.0",
     "sma-contact-flow-parser": "^1.0.0"
   },
   "devDependencies": {
