--- a/sma-contact-flow/chime-sma-translator/package.json
+++ b/sma-contact-flow/chime-sma-translator/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sma-contact-flow-parser",
-  "version": "1.0.0",
+  "name": "chime-sma-translator",
+  "version": "0.0.1",
   "description": "Parses Amazon Connect contact flows for use in SMA",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.1183.0",
     "dotenv-json": "^1.0.0",
-    "sma-contact-flow-parser": "^1.0.0"
+    "chime-sma-translator": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.6.1"
