Latest CDK changes with Phone Number provisioning

--- a/sma-contact-flow/chime-sma-translator-cdk/.env
+++ b/sma-contact-flow/chime-sma-translator-cdk/.env
@@ -1,2 +1,3 @@
-region = us-east-1
-Connect_arn = arn:aws:connect:us-east-1:664887287655:instance/a2ad01f9-0df4-4e52-b49f-cc4eb9b72704/contact-flow/c32b76af-19ed-4ef9-80cb-1a972f85f8b3
+Connect_arn =  
+Area_code = 757
+Country=US
